--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,10 @@ build/
 ### VS Code ###
 .vscode/
 
-src/main/application/.properties
+src/main/resources/application/.properties
 application.properties
+
+src/main/java/repository/HiddenInfo
+HiddenInfo
+
+
